Anomalie #816: Err 500 getOne
+ Ajout d'un message en remplacement du contenu de l'element lorsque celui-ci n'existe plus

--- a/app/Resources/translations/elements.en.yml
+++ b/app/Resources/translations/elements.en.yml
@@ -9,6 +9,8 @@ noelements:
   
   sentence_filter_link_string: delete them.
   
+  nofound_anymore:      Share not found (maybe deleted by owner)
+  
 element:
   favorite:
     add:                Add to faves
