--- a/app/Resources/translations/elements.en.yml
+++ b/app/Resources/translations/elements.en.yml
@@ -12,6 +12,7 @@ noelements:
   nofound_anymore:      Share not found (maybe deleted by owner)
   
 element:
+  permalink:            Permalink
   favorite:
     add:                Add to faves
     remove:             Remove from faves
