Evolution #820: Likes / Twitt

--- a/app/Resources/translations/userui.en.yml
+++ b/app/Resources/translations/userui.en.yml
@@ -246,6 +246,8 @@ element:
       no:                No
   share:
     share_button:        Share
+    twitter:            
+      text:              "Some music ? "
     
 comment:
   report:
