--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -258,6 +258,8 @@ element:
       no:                Non
   share:
     share_button:        Partager
+    twitter:            
+      text:              "Un peu de musique ? "
     
 comment:
   report:
