--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -3,34 +3,34 @@ Username:     Nom d'utilisateur
 
 date_since:
   default:
-    less_min:      Il y a moins d'une minute
-    one_min:       Il y a une minute
-    one_hour:      Il y a une heure
-    one_day:       Il y a un jour
-    one_week:       Il y a une semaine
-    one_month:       Il y a un mois
-    one_year:       Il y a un an
-    x_min:         Il y a %x% minutes
-    x_hour:        Il y a %x% heures
-    x_day:         Il y a %x% jours
-    x_week:         Il y a %x% semaines
-    x_month:         Il y a %x% mois
-    x_year:         Il y a %x% ans
+    less_min:      il y a moins d'une minute
+    one_min:       il y a une minute
+    one_hour:      il y a une heure
+    one_day:       il y a un jour
+    one_week:       il y a une semaine
+    one_month:       il y a un mois
+    one_year:       il y a un an
+    x_min:         il y a %x% minutes
+    x_hour:        il y a %x% heures
+    x_day:         il y a %x% jours
+    x_week:         il y a %x% semaines
+    x_month:         il y a %x% mois
+    x_year:         il y a %x% ans
   comment:
     created:
-      less_min:      Il y a moins d'une minute
-      one_min:       Il y a une minute
-      one_hour:      Il y a une heure
-      one_day:       Il y a un jour
-      one_week:       Il y a une semaine
-      one_month:       Il y a un mois
-      one_year:       Il y a un an
-      x_min:         Il y a %x% minutes
-      x_hour:        Il y a %x% heures
-      x_day:         Il y a %x% jours
-      x_week:         Il y a %x% semaines
-      x_month:         Il y a %x% mois
-      x_year:         Il y a %x% ans
+      less_min:      il y a moins d'une minute
+      one_min:       il y a une minute
+      one_hour:      il y a une heure
+      one_day:       il y a un jour
+      one_week:       il y a une semaine
+      one_month:       il y a un mois
+      one_year:       il y a un an
+      x_min:         il y a %x% minutes
+      x_hour:        il y a %x% heures
+      x_day:         il y a %x% jours
+      x_week:         il y a %x% semaines
+      x_month:         il y a %x% mois
+      x_year:         il y a %x% ans
     edited:
       less_min:      et modifié il y a moins d'une minute
       one_min:       et modifié il y a une minute
