--- a/app/Resources/translations/flash.en.yml
+++ b/app/Resources/translations/flash.en.yml
@@ -51,3 +51,5 @@ playlist:
     success:       Playlist deleted
   update:
     success:       Playlist updaded
+  create:
+    success:       Playlist created
