--- a/app/Resources/translations/users.fr.yml
+++ b/app/Resources/translations/users.fr.yml
@@ -7,6 +7,7 @@ user:
   view_profile:                 Profil
   stop_follow:                  Ne plus suivre
   view_playlists:               Listes de lectures
+  new_playlist:                 Créer une nouvelle liste
   show:
     title:                      Diffusions de %name%
   reputation:
